# ro-crate-py

./: .gitignore  EncryptedMetadataDoc.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
rocrate/: encryption_utils.py  metadata.py  rocrate.py
rocrate/model/: __init__.py  computationalworkflow.py  encryptedcontextentity.py  encryptedgraphmessage.py  encryptionkeyholder.py  entity.py  keyholder.py  metadata.py
test/: test_encryption.py
